--- a/package.json
+++ b/package.json
@@ -1,23 +1,66 @@
 {
   "name": "calendonew",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "index.tsx",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "format": "prettier --write \"src/**/*.{js,ts,tsx}\""
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@realm/react": "^0.11.0",
     "expo": "~51.0.28",
+    "expo-dev-client": "~4.0.28",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
+    "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-floating-action": "^1.22.0",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-material-chips": "^1.0.2",
+    "react-native-modalize": "^2.1.1",
+    "react-native-modals": "^0.22.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.7.1",
+    "react-native-switch": "^1.5.1",
+    "react-native-web": "~0.19.10",
+    "realm": "^12.13.1",
+    "styled-components": "^6.1.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "babel-loader": "8.3.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.3",
+    "prettier": "^3.3.3",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
