--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "CalendoNew",
-    "slug": "CalendoNew",
+    "name": "AppName", // Placeholder for app name
+    "slug": "app-name", // Placeholder for app slug
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon.png", // Replace with your app icon
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash.png", // Replace with your splash screen image
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,13 +16,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png", // Replace with your Android adaptive icon
         "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.CalendoNew"
+      "package": "com.yourdomain.appname" // Placeholder for app package name
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png" // Replace with your web favicon
     },
     "assetBundlePatterns": [
       "**/*",
