--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "codeflux-labs-template",
   "version": "1.0.0",
+  "description": "A template for Expo projects using Realm and Formik.",
   "main": "index.tsx",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "start": "npx expo start",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web",
     "format": "prettier --write \"src/**/*.{js,ts,tsx}\""
   },
   "dependencies": {
@@ -16,8 +17,9 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "@realm/react": "^0.11.0",
-    "expo": "~51.0.28",
+    "expo": "^51.0.38",
     "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -62,7 +64,7 @@
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
-  "private": true,
+  "private": false,
   "license": "MIT",
   "repository": {
     "type": "git",
