--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
 
             # Install dependencies
             - name: Install dependencies
-              run: npm install
+              run: npm install --legacy-peer-deps
 
             # Publish the package to npm
             - name: Publish to npm
