--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,8 @@ jobs:
 
             # Publish the package to npm
             - name: Publish to npm
-              run: npm publish
+              run: npm publish --acess public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  token: ${{ secrets.NPM_TOKEN }}
