--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "react-native-screens": "~4.1.0",
         "react-native-svg": "15.8.0",
         "react-native-switch": "^1.5.1",
-        "react-native-unistyles": "^2.20.0",
+        "react-native-unistyles": "^3.0.0-beta.4",
         "react-native-web": "~0.19.13",
         "styled-components": "^6.1.13",
         "use-between": "^1.3.5",
