--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "@react-native-async-storage/async-storage": "1.23.1",
         "@react-native-community/datetimepicker": "8.2.0",
         "@react-native-community/masked-view": "^0.1.11",
-        "@react-navigation/bottom-tabs": "^7.2.0",
-        "@react-navigation/native": "^6.1.18",
-        "@react-navigation/native-stack": "^6.11.0",
-        "@react-navigation/stack": "^6.4.1",
+        "@react-navigation/bottom-tabs": "6.6.1",
+        "@react-navigation/native": "6.1.18",
+        "@react-navigation/native-stack": "6.11.0",
+        "@react-navigation/stack": "6.4.1",
         "@tanstack/query-sync-storage-persister": "^5.62.7",
         "@tanstack/react-query": "^5.62.3",
         "@tanstack/react-query-persist-client": "^5.62.7",
@@ -55,7 +55,6 @@
         "react-native-screens": "~4.1.0",
         "react-native-svg": "15.8.0",
         "react-native-switch": "^1.5.1",
-        "react-native-unistyles": "^3.0.0-beta.4",
         "react-native-web": "~0.19.13",
         "styled-components": "^6.1.13",
         "use-between": "^1.3.5",
@@ -65,6 +64,7 @@
     "devDependencies": {
         "@babel/core": "^7.20.0",
         "@react-native-community/cli": "latest",
+        "@tanstack/eslint-plugin-query": "^5.62.1",
         "@types/react": "~18.3.12",
         "@types/react-native": "^0.73.0",
         "babel-loader": "8.3.0",
