--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@react-navigation/native": "6.1.18",
         "@react-navigation/native-stack": "6.11.0",
         "@react-navigation/stack": "6.4.1",
+        "@shopify/flash-list": "1.7.1",
         "@tanstack/query-sync-storage-persister": "^5.62.7",
         "@tanstack/react-query": "^5.62.3",
         "@tanstack/react-query-persist-client": "^5.62.7",
