--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start:dev": "APP=ENV=development npx expo start",
         "start:qas": "APP=ENV=test npx expo start",
         "start:prd": "APP=ENV=production npx expo start",
-        "build:dev": "eas build --profile development --platform android",
+        "build:android:dev": "eas build --profile development --platform android",
+        "build:ios:dev": "eas build --profile development --platform ios",
         "android": "npx expo run:android",
         "ios": "npx expo run:ios",
         "web": "npx expo start --web",
@@ -50,12 +51,14 @@
         "react-native-mmkv": "^3.2.0",
         "react-native-modalize": "^2.1.1",
         "react-native-modals": "^0.22.3",
+        "react-native-pager-view": "^6.6.1",
         "react-native-paper": "^5.12.5",
         "react-native-reanimated": "~3.16.1",
         "react-native-safe-area-context": "4.12.0",
         "react-native-screens": "~4.1.0",
         "react-native-svg": "15.8.0",
         "react-native-switch": "^1.5.1",
+        "react-native-tab-view": "^4.0.5",
         "react-native-web": "~0.19.13",
         "styled-components": "^6.1.13",
         "use-between": "^1.3.5",
