--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-hook-form": "^7.54.1",
         "react-native": "^0.76.5",
         "react-native-calendars": "^1.1307.0",
+        "react-native-copilot": "^3.3.3",
         "react-native-edge-to-edge": "^1.1.3",
         "react-native-floating-action": "^1.22.0",
         "react-native-gesture-handler": "~2.20.2",
