--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
         "expo-dev-client": "~5.0.6",
         "expo-font": "~13.0.1",
         "expo-in-app-updates": "^0.5.0",
+        "expo-linear-gradient": "~14.0.2",
         "expo-linking": "~7.0.3",
+        "expo-local-authentication": "~15.0.2",
         "expo-splash-screen": "~0.29.18",
         "expo-status-bar": "~2.0.0",
         "expo-system-ui": "~4.0.6",
         "expo-web-browser": "~14.0.1",
         "moment": "^2.30.1",
+        "moti": "^0.30.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-hook-form": "^7.54.1",
