--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "A template for Expo projects using React Query, Zustand and MMKV",
     "main": "index.tsx",
     "scripts": {
-        "start:dev": "APP=ENV=development npx expo start",
-        "start:qas": "APP=ENV=test npx expo start",
-        "start:prd": "APP=ENV=production npx expo start",
+        "start:dev": "APP_ENV=development npx expo start",
+        "start:qas": "APP_ENV=test npx expo start",
+        "start:prd": "APP_ENV=production npx expo start",
         "build:android:dev": "eas build --profile development --platform android",
         "build:ios:dev": "eas build --profile development --platform ios",
         "android": "npx expo run:android",
@@ -29,6 +29,7 @@
         "@tanstack/react-query": "^5.62.3",
         "@tanstack/react-query-persist-client": "^5.62.7",
         "axios": "^1.7.9",
+        "evolog-core": "^1.0.9",
         "expo": "^52.0.18",
         "expo-checkbox": "~4.0.0",
         "expo-dev-client": "~5.0.6",
